# optiverse

./: .gitignore  .ruff.toml  ALL_TODOS_COMPLETE.md  ARCHITECTURE_CRITIQUE_AND_STRATEGY.md  ARCHITECTURE_REVIEW_README.md  ARCHITECTURE_REVIEW_SUMMARY.md  ARCHITECTURE_TRANSFORMATION_COMPLETE.md  ASPECT_RATIO_FIX.md  AUTOTRACE_PERFORMANCE_FIX.md  CHANGES_SUMMARY.md  CODE_VERIFICATION_REPORT.md  COLLABORATION_SETUP_GUIDE.md  COLLABORATIVE_ARCHITECTURE_DIAGRAMS.md  COLLABORATIVE_CLIENT_APPROACH_README.md  COLLABORATIVE_CLIENT_BASED_STRATEGY.md  COLLABORATIVE_CLIENT_INTEGRATION_EXAMPLE.py  COLLABORATIVE_CODE_EXAMPLES.md  COLLABORATIVE_DECISION_MATRIX.md  COLLABORATIVE_QUICKSTART.md  COLLABORATIVE_SUMMARY.md  COLLABORATIVE_WEB_STRATEGY.md  COMPONENT_CALIBRATION_FIX.md  COMPONENT_EDITOR_OBJECT_HEIGHT_UPDATE.md  COMPONENT_EDITOR_UPDATES.md  COMPONENT_EDITOR_UPGRADE.md  COMPONENT_LIBRARY_RESTRUCTURE_SUMMARY.md  COMPONENT_PLACEMENT_MODE.md  COMPONENT_STORAGE_ARCHITECTURE.md  COORDINATE_DENORMALIZATION_FIX_FINAL.md  COORDINATE_EDITING_FEATURE.md  COORDINATE_FIX_README.md  COPY_PASTE_DEMO.md  COPY_PASTE_FEATURE.md  COPY_PASTE_GUIDE.txt  CURVED_REFRACTION_FIX_COMPLETE.md  CURVED_RENDERING_BUG_FIX.md  CURVED_SURFACES_100_PERCENT_COMPLETE.md  CURVED_SURFACES_AND_CENTERED_COORDS_FIX.md  CURVED_SURFACES_BEFORE_AFTER.md  CURVED_SURFACES_FIX_QUICK_GUIDE.md  (+134 more)
.github/: copilot-instructions.md
docs/: .nojekyll  BEAM_SPLITTER_PATH_MEASUREMENT.md  COLLABORATION.md  COLLABORATION_CONNECTION_FIX.md  COLLABORATION_FINAL_FIX.md  COLLABORATION_FIXES.md  COLLABORATION_IMPLEMENTATION.md  COLLABORATION_IMPLEMENTATION_COMPLETE.md  COLLABORATION_SERVER_V2_SUMMARY.md  Gemfile  (+94 more)
(+296 files in other folders)
